added translateZ 0 to animated elements

--- a/resources/assets/less/frontend/theme.less
+++ b/resources/assets/less/frontend/theme.less
@@ -6376,8 +6376,9 @@ MOBILE
 .alert-warning a{
 	color: #D88519;
 }
-
-
+#sub-body, .background-image-holder{
+	-webkit-transform: translateZ(0);
+}
 
 
 
