--- a/resources/assets/css/frontend/custom.css
+++ b/resources/assets/css/frontend/custom.css
@@ -241,7 +241,7 @@ nav.fixed.scrolled { display: none; }
 a.question-btn, input.question-btn{
     width: 100%;
     height: 40px;
-    min-width: initial !important;
+    min-width: initial;
     line-height: 38px;
     margin-bottom: 0;
 }
@@ -823,7 +823,7 @@ div.center-cropped {
 }
 
 div.center-cropped img {
-    max-width: 100%;
+    max-width: 100% !important;
     margin: auto;
     min-height: 100%;
     min-width: 100%;
@@ -844,7 +844,7 @@ div.center-cropped img {
 .avatar-actions input[type="submit"], .avatar-actions a.btn{
     width: 150px;
     margin-left: 0;
-    min-width: 150px
+    min-width: initial !important;
 }
 
 .avatar-actions a.btn:hover{
@@ -1218,10 +1218,10 @@ span.text-red{
     max-width: 50%;
     float: left;
     margin-right: 25px;
-    margin-bottom: 25px;
+    margin-bottom: 10px;
 }
 @media all and (max-width:500px) {
-    .inner-article .post-snippet img {
+    .inner-article .post-snippet img.featured-image {
         max-height: none;
         max-width: none;
         width: 100%;
