--- a/resources/assets/less/frontend/theme.less
+++ b/resources/assets/less/frontend/theme.less
@@ -3105,7 +3105,7 @@ h1.uppercase {
 		right: -247px;
 	}
 	.section-blog.inner-blog .arrow-style{
-		padding-top: 30px;
+		padding-top: 0;
 	}
 }
 
