added mob questions list tabs js functionality, new photos cache size 30x30, removed border top from very first object in questions list mob

--- a/resources/assets/css/frontend/custom.css
+++ b/resources/assets/css/frontend/custom.css
@@ -1627,3 +1627,6 @@ a.facebook-color:hover{
 #menu{
     opacity: 0;
 }
+.questions-container .table>tbody>tr:first-child>td{
+    border-top: none;
+}
