background hip skok

--- a/resources/assets/less/frontend/theme.less
+++ b/resources/assets/less/frontend/theme.less
@@ -5272,7 +5272,14 @@ html {
 .slideout-panel {
 	position:relative;
 	z-index: 1;
-	/*will-change: transform;*/
+	background-image: url("../images/pattern.jpg");
+	background-attachment: fixed;
+	background-size: 300px;
+	background-repeat: repeat;
+	background-color: #666;
+}
+.front-page .slideout-panel {
+	background: none;
 }
 
 .slideout-open,
