--- a/resources/assets/less/frontend/theme.less
+++ b/resources/assets/less/frontend/theme.less
@@ -5272,6 +5272,8 @@ html {
 .slideout-panel {
 	position:relative;
 	z-index: 1;
+}
+#sub-body {
 	background-image: url("../images/pattern.jpg");
 	background-attachment: fixed;
 	background-size: 300px;
