--- a/resources/assets/less/frontend/theme.less
+++ b/resources/assets/less/frontend/theme.less
@@ -5280,9 +5280,31 @@ html {
 	background-repeat: repeat;
 	background-color: #666;
 }
-.front-page .slideout-panel {
-	background: none;
+.front-page #sub-body {
+	background-size: cover;
+	background-position: center;
+
+	-webkit-transition: background 0.5s linear;
+	-moz-transition: background 0.5s linear;
+	-o-transition: background 0.5s linear;
+	transition: background 0.5s linear;
 }
+
+.front-page #sub-body:before {
+	position: fixed;
+	content: '';
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background: #000;
+	opacity: 0.5;
+	z-index: 2;
+}
+.homepage-image-holder {
+	display: none;
+}
+
 
 .slideout-open,
 .slideout-open body,
