--- a/resources/assets/less/frontend/theme.less
+++ b/resources/assets/less/frontend/theme.less
@@ -5284,10 +5284,6 @@ body:not(.front-page) #sub-body {
 	background-color: #666;
 }
 .front-page #sub-body {
-	-webkit-background-size: auto 100%;
-	-moz-background-size: auto 100%;
-	-o-background-size: auto 100%;
-	background-size: auto 100%;
 	background-repeat: no-repeat;
 
 	-webkit-background-size: cover;
@@ -5301,7 +5297,6 @@ body:not(.front-page) #sub-body {
 	-o-transition: background-image 0.3s ease-in-out;
 	transition: background-image 0.3s ease-in-out;
 }
-
 .front-page #sub-body:before {
 	position: fixed;
 	content: '';
@@ -5309,8 +5304,11 @@ body:not(.front-page) #sub-body {
 	height: 100%;
 	top: 0;
 	left: 0;
-	background: #000;
-	opacity: 0.5;
+	background: url("../images/welcome.jpg") no-repeat center center;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
 	z-index: 2;
 }
 .homepage-image-holder {
