--- a/resources/assets/less/frontend/theme.less
+++ b/resources/assets/less/frontend/theme.less
@@ -5298,7 +5298,7 @@ body:not(.front-page) #sub-body {
 	transition: background-image 0.3s ease-in-out;
 }
 .front-page #sub-body:before {
-	position: fixed;
+	position: absolute;
 	content: '';
 	width: 100%;
 	height: 100%;
