--- a/resources/assets/less/frontend/theme.less
+++ b/resources/assets/less/frontend/theme.less
@@ -5284,6 +5284,10 @@ body:not(.front-page) #sub-body {
 	background-color: #666;
 }
 .front-page #sub-body {
+	-webkit-background-size: auto 100%;
+	-moz-background-size: auto 100%;
+	-o-background-size: auto 100%;
+	background-size: auto 100%;
 	background-repeat: no-repeat;
 
 	-webkit-background-size: cover;
@@ -5297,21 +5301,16 @@ body:not(.front-page) #sub-body {
 	-o-transition: background-image 0.3s ease-in-out;
 	transition: background-image 0.3s ease-in-out;
 }
+
 .front-page #sub-body:before {
-	position: absolute;
+	position: fixed;
 	content: '';
 	width: 100%;
 	height: 100%;
 	top: 0;
 	left: 0;
-	background-image: url("../images/welcome.jpg");
-	background-repeat: no-repeat;
-	background-position: center center;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;
-	background-attachment: fixed;
+	background: #000;
+	opacity: 0.5;
 	z-index: 2;
 }
 .homepage-image-holder {
