--- a/resources/assets/css/frontend/custom.css
+++ b/resources/assets/css/frontend/custom.css
@@ -1587,7 +1587,7 @@ p.discount span.round{
 
 body.front-page,
 body.soon-page{
-    background-color: #2B2C2F;
+    background-color: #080808;
 }
 /********/
 .vouchers .credits .price.claim span.use-voucher{
