password and 404 pages, payment layout oprocz mokejimasa w przedzie , authorize question , ielkosci fotkov na payment

--- a/resources/assets/css/frontend/custom.css
+++ b/resources/assets/css/frontend/custom.css
@@ -260,7 +260,9 @@ div.question-body img{
     max-height: 226px;
     margin: 0 auto;
 }
-
+div.question-body.your-question img {
+    width: auto;
+}
 div.question-body .modal-container{
     float: right;
 }
