--- a/resources/assets/less/frontend/theme.less
+++ b/resources/assets/less/frontend/theme.less
@@ -4606,7 +4606,9 @@ BLOG
 .bg-white {
 	background-color: white;
 }
-.outer-blog .container {
+.outer-blog .container,
+.inner-blog .container,
+.examples-page .container{
 	z-index: 2;
 }
 .post-snippet .inner h5 {
