--- a/resources/assets/less/frontend/theme.less
+++ b/resources/assets/less/frontend/theme.less
@@ -1978,8 +1978,10 @@ nav.transparent .menu > li:first-child > a {
 }
 
 .nav-bar {
-
-	background-color: rgba(0,0,0, 0.7);
+	background: -moz-linear-gradient(top, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(top, rgba(0,0,0,1) 0%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(to bottom, rgba(0,0,0,1) 0%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
 }
 
 .background-image-holder{
@@ -2121,7 +2123,7 @@ body.front-page {
 	margin: auto;
 	top: 61px;
 	right: 6%;
-	opacity: 0.5;
+	opacity: 0.9;
 }
 .footer-logo:after {
 	content: "";
