profile header back

--- a/resources/assets/css/frontend/custom.css
+++ b/resources/assets/css/frontend/custom.css
@@ -220,7 +220,10 @@ nav .nav-home, nav .nav-home .menu > li ul{
 }
 */
 nav .nav-profile, nav .nav-profile .menu > li ul{
-    background-color: rgba(0,0,0, 0.7);
+    background: -moz-linear-gradient(top, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, rgba(0,0,0,1) 0%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, rgba(0,0,0,1) 0%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
 }
 
 nav .nav-open .menu > li ul{
