links and colors

--- a/resources/assets/less/frontend/theme.less
+++ b/resources/assets/less/frontend/theme.less
@@ -1685,6 +1685,7 @@ section+.portfolio-pullup{ padding-top: 0; margin-top: -128px; position: relativ
 /*!---------- 36. FOOTERS ----------*/
 
 footer.bg-dark a{ color: #fff; }
+footer.bg-dark .sub a{ color: #666; }
 
 .footer-1 .logo{ max-height: 30px; }
 .footer-1 .sub{ opacity: .5; }
